src/objects/C501_Partnership__c.object
<CustomObject>
    <description>Links an Partner type Account with another Account, either Collab or Family record type</description>
    <fields>
        <fullName>C501_Brief_Description__c</fullName>
        <description>Optional - describe the relationship between these two accounts</description>
        <label>Brief Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C501_Collaborative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Collaborative that works with this Partner</description>
        <label>Collaborative</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select an Account that has a record type of Collaborative</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Collaborative</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collab&apos;s Partners</relationshipLabel>
        <relationshipName>CollaborativePartnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C501_End_Date__c</fullName>
        <description>When did this partnership end?</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select an Account with record type Family</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Family</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Family&apos;s Partners</relationshipLabel>
        <relationshipName>FamilyPartnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C501_Partner__c</fullName>
        <description>Required - the Partner that has relationships with Collabs and Families</description>
        <label>Partner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select an Account with a record type of Partner</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner&apos;s Collabs and Families</relationshipLabel>
        <relationshipName>PartnerPartnerships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>C501_Partnership_Status__c</fullName>
        <description>Current state of the partnership</description>
        <label>Partnership Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Start_Date__c</fullName>
        <description>When did this partnership begin?</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Partnership</label>
    <nameField>
        <label>Partnership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partnerships</pluralLabel>
    <recordTypes>
        <fullName>C501_Partner_Collab</fullName>
        <active>true</active>
        <description>Record type for relationships between a Partner and a Collab</description>
        <label>Partner-Collab</label>
    </recordTypes>
    <recordTypes>
        <fullName>C501_Partner_Family</fullName>
        <active>true</active>
        <description>Use for displaying a partnership between a Partner and a Family</description>
        <label>Partner-Family</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>